* 20011119 : v2.0.0-osx0.0.3
	* First import.
* 20011119 : v2.0.3-osx0.0.3
	* "Yes, it finally happens !" -- Linus
	     * ie. first merge with Romain's tree
	     => Well, at least on my side.
* 20011209 : v2.0.7-osx0.0.4
	* Merge up to 2.0.7
* 20011216 : v2.0.7-osx0.0.4
	* Fixed paths in PB project files
* 20020106 : v3.0.2-osx0.0.4
	* Happy new year !
	    => Copyright 1999-2002
	* Merged in libticalcs v3
* 20020112 : v3.0.2-osx0.1.0
	* Misc fixes.
* 20020119 : v3.0.5-osx0.1.0
	* Merge up to 3.0.5.
* 20020121 : v3.0.7-osx0.1.0
	* Merge up to 3.0.7.
	
	