@@ -61,8 +61,6 @@ extern "C" {
   int TICALL ticalc_get_error(int err_num, char *error_msg);
   
   int TICALL detect_calc(int *calc_type);
-  int TICALL ti89_92_92p_isready(int *calc_type);
-  #define ticalc_89_92_92p_isready	ti89_92_92p_isready
   int TICALL ticalc_83p_89_92p_isready(int *calc_type);
   
   int TICALL ticalc_open_ti_file(char *filename, char *mode, FILE **fd);
