@@ -44,7 +44,7 @@ const struct ti_key TI89_KEYS[]=
   { "", "", 0, "", 0, "", 0, "", 0, "", 0 },
   { "", "", 0, "", 0, "", 0, "", 0, "", 0 },
   { "", "", 0, "", 0, "", 0, "", 0, "", 0 },
-  { "ENTER", "CALC_CR", 13, "CALC_CR", 13, "ENTRY", 4109, "APPROX", 8205, "CALC_CR", 13 },
+  { "ENTER", "CR", 13, "CR", 13, "ENTRY", 4109, "APPROX", 8205, "CR", 13 },
   { "", "", 0, "", 0, "", 0, "", 0, "", 0 },
   { "", "", 0, "", 0, "", 0, "", 0, "", 0 },
   /* 0x10 */
